Spacing corrections and unnecessary commented code deleted

--- a/styles.css
+++ b/styles.css
@@ -10,8 +10,6 @@ body {
     margin: 0;
     min-width: 320px;
     font-family: "Inter";
-    /* overflow: auto; */
-    /* scroll-behavior: auto; */
 }
 
 .header {
@@ -25,21 +23,17 @@ body {
     min-width: inherit;
     color: var(--header-text-color);
     background-image: url(/images/header-img.png);
-    /* background-position: center; */
     background-repeat: no-repeat;
     background-size:100% auto;
     background-blend-mode: brightness(60%);
     background-position-y: -100px;
-    
     word-spacing: 10px;
     letter-spacing: 3px;
     text-shadow: 1px 1px 10px black;
 
-
     h1 {
         font-size: 2.3em;
         font-weight: 700;
-        /* height: 100%; */
         padding: 40px 0;
         margin: 0;
         &:hover, &:focus {
@@ -53,18 +47,10 @@ body {
     }
 
     h2 {
-        /* padding-top: 0;
-        margin: 0; */
         font-weight: 400;
         font-size: 1.5rem;
-
-        /* &:hover {
-            
-        } */
     }
 }
-
-
 
 .main {
     display: flex;
@@ -113,13 +99,13 @@ body {
         width: 90%;
         margin: 5px auto;
         border-bottom: 3px solid #E5E7EB;
-        
 
         .photo-container {
             min-width: 100px;
             max-width: 20%;
             display: flex;
             align-content: center;
+
             img {
                 align-self: center;
                 min-height: 150px;
@@ -137,8 +123,7 @@ body {
             align-items: top;
             gap: 10px;
             align-items: center;
-            
-            
+
             h3 {
                 font-weight: 500;
             }
@@ -155,20 +140,16 @@ body {
             font-size: .8em;
             align-items: center;
             height: 10px;
-            
             margin-bottom: 30px;
-            }
-
-        /* .movie-bottom {
-
-        } */
+        }
     }
 }
 
 @media only screen and (max-width: 370px) {
     .header  {
+
         h1, h2 {
-        font-size: .9rem;
+            font-size: .9rem;
         }
     }
 
@@ -195,12 +176,10 @@ body {
 
 @media only screen and (min-width: 600px) {
     .header {
-        background-position-y: 30%;
-        
+        background-position-y: 30%; 
     }
 
     .movie-article {
-
         .movie-mid {
             display: flex;
         }
